+ Enable Press and Hold gesture to make easier access to context menu on touch devices
+ Add Danish translation
+ Ticket #5147, Add /randomize command-line switch for playlist randomization
* Ticket #5294, Use internal LAV Splitter for demuxing WTV files
* Updated Little CMS to v2.7 (git 926963a)
* Updated Unrar to v5.2.6
* Updated SoundTouch to v1.8.0 r208
* Updated LAV Filters to v0.64.0.11:
    - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
    - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
    - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
* Updated Basque, British English, Catalan, Chinese (Simplified), Czech, Dutch, Finnish, French, Galician,
  German, Greek, Japanese, Korean, Malay, Polish, Romanian, Russian, Serbian, Slovak, Spanish, Ukrainian
  and Vietnamese translations
! EVR-CP/Sync renderers could produce wrong colors
! Do not mirror the status bar and the time indicator when using an RTL layout
! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
! Ticket #5183, Fix a rare crash when processing after playback event
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5241, Improve the handling of RTL layout for dockable bars (Playlist, Subresync, etc.)
! Ticket #5247, "Information" panel was not showing new lines until window resize
! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles
! Ticket #5274, Dockable bars: Improve reloading of saved state
! Ticket #5280, The /nofocus command line option did nothing when starting MPC-HC
! Ticket #5314, If an explicit start time was set (for example from the command line or a favorite),