@@ -19,10 +19,12 @@ next version - not released yet
 * Updated Little CMS to v2.7 (git 926963a)
 * Updated Unrar to v5.2.6
 * Updated SoundTouch to v1.8.0 r208
-* Updated LAV Filters to v0.64.0.11:
+* Updated LAV Filters to v0.64.0.32:
     - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
     - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
     - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
+    - Ticket #5330, LAV Video Decoder: Improve DVD subtitles timeout in some cases
+    - Ticket #5333, LAV Splitter: Fix handling of some Blu-Ray playlist
 * Updated Basque, British English, Catalan, Chinese (Simplified), Czech, Dutch, Finnish, French, Galician,
   German, Greek, Japanese, Korean, Malay, Polish, Romanian, Russian, Serbian, Slovak, Spanish, Ukrainian
   and Vietnamese translations
